tests/outref/TTA007.ref

select least(n1.*) from names n1;
select least(n1.*,n1.id) from names n1;
select least(n1.*,NULL) from names n1;
select greatest(n1.*,n1.id) from names n1;
select greatest(n1.*,NULL) from names n1;
select greatest(n1.*) from names n1;
select coalesce(n1.*,n1.id) from names n1;
select coalesce(n1.*,NULL) from names n1;
select coalesce(n1.*) from names n1;
select nullif(n1.*,n1.*) from names n1;
select nullif(n1.*,NULL) from names n1;
select nullif(n1.*,n1.id) from names n1;
select nullif(NULL,n1.*) from names n1;
select 1 from names n1 order by coalesce(n1.*);
select 1 from names n1 order by coalesce(n1.id, n1.*);
select 1 from names n1 order by coalesce(NULL, n1.*);
select 1 from names n1 order by greatest(n1.*);
select 1 from names n1 order by greatest(n1.id, n1.*);
select 1 from names n1 order by greatest(NULL, n1.*);
select 1 from names n1 order by nullif(n1.id, n1.*);
select 1 from names n1 order by nullif(NULL, n1.*);
select 1 from names n1 order by nullif(n1.*, n1.*);
select 1 from names n1 where coalesce(n1.*)=NULL;
select 1 from names n1 where greatest(n1.*)=NULL;
select 1 from names n1 where least(n1.*)=NULL;
select 1 from names n1 where nullif(n1.*,NULL)=NULL;
select 1 from names n1 where nullif(NULL,n1.*)=NULL;
select 1 from names n1 where nullif(n1.*,n1.*)=NULL;
select 1 from names n1 group by n1.* having coalesce(n1.*)=NULL;
select 1 from names n1 group by n1.* having greatest(n1.*)=NULL;
select 1 from names n1 group by n1.* having least(n1.*)=NULL;
select 1 from names n1 group by n1.* having nullif(n1.*,NULL)=NULL;
select 1 from names n1 group by n1.* having nullif(n1.*,n1.*)=NULL;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for least operation
Error with syntax near (line 1, column 14):

select least(n1.*) from names n1;
             ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select least(n1.*) from names n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left TABLENAME.*, right INTEGER
Error with syntax near (line 1, column 14):

select least(n1.*,n1.id) from names n1;
             ^^^^
Error with syntax near (line 1, column 19):

select least(n1.*,n1.id) from names n1;
                  ^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select least(n1.*,n1.id) from names n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for least operation
Error with syntax near (line 1, column 14):

select least(n1.*,NULL) from names n1;
             ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select least(n1.*,NULL) from names n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left TABLENAME.*, right INTEGER
Error with syntax near (line 1, column 17):

select greatest(n1.*,n1.id) from names n1;
                ^^^^
Error with syntax near (line 1, column 22):

select greatest(n1.*,n1.id) from names n1;
                     ^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select greatest(n1.*,n1.id) from names n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for greatest operation
Error with syntax near (line 1, column 17):

select greatest(n1.*,NULL) from names n1;
                ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select greatest(n1.*,NULL) from names n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for greatest operation
Error with syntax near (line 1, column 17):

select greatest(n1.*) from names n1;
                ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select greatest(n1.*) from names n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left TABLENAME.*, right INTEGER
Error with syntax near (line 1, column 17):

select coalesce(n1.*,n1.id) from names n1;
                ^^^^
Error with syntax near (line 1, column 22):

select coalesce(n1.*,n1.id) from names n1;
                     ^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select coalesce(n1.*,n1.id) from names n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for coalesce operation
Error with syntax near (line 1, column 17):

select coalesce(n1.*,NULL) from names n1;
                ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select coalesce(n1.*,NULL) from names n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for coalesce operation
Error with syntax near (line 1, column 17):

select coalesce(n1.*) from names n1;
                ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select coalesce(n1.*) from names n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for nullif operation
Error with syntax near (line 1, column 15):

select nullif(n1.*,n1.*) from names n1;
              ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select nullif(n1.*,n1.*) from names n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for nullif operation
Error with syntax near (line 1, column 15):

select nullif(n1.*,NULL) from names n1;
              ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select nullif(n1.*,NULL) from names n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left TABLENAME.*, right INTEGER
Error with syntax near (line 1, column 15):

select nullif(n1.*,n1.id) from names n1;
              ^^^^
Error with syntax near (line 1, column 20):

select nullif(n1.*,n1.id) from names n1;
                   ^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select nullif(n1.*,n1.id) from names n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for nullif operation
Error with syntax near (line 1, column 15):

select nullif(NULL,n1.*) from names n1;
              ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select nullif(NULL,n1.*) from names n1;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for coalesce operation
Error with syntax near (line 1, column 42):

select 1 from names n1 order by coalesce(n1.*);
                                         ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 order by coalesce(n1.*);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left INTEGER, right TABLENAME.*
Error with syntax near (line 1, column 42):

select 1 from names n1 order by coalesce(n1.id, n1.*);
                                         ^^^^^
Error with syntax near (line 1, column 49):

select 1 from names n1 order by coalesce(n1.id, n1.*);
                                                ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 order by coalesce(n1.id, n1.*);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for coalesce operation
Error with syntax near (line 1, column 42):

select 1 from names n1 order by coalesce(NULL, n1.*);
                                         ^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 order by coalesce(NULL, n1.*);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for greatest operation
Error with syntax near (line 1, column 42):

select 1 from names n1 order by greatest(n1.*);
                                         ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 order by greatest(n1.*);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left INTEGER, right TABLENAME.*
Error with syntax near (line 1, column 42):

select 1 from names n1 order by greatest(n1.id, n1.*);
                                         ^^^^^
Error with syntax near (line 1, column 49):

select 1 from names n1 order by greatest(n1.id, n1.*);
                                                ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 order by greatest(n1.id, n1.*);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for greatest operation
Error with syntax near (line 1, column 42):

select 1 from names n1 order by greatest(NULL, n1.*);
                                         ^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 order by greatest(NULL, n1.*);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left INTEGER, right TABLENAME.*
Error with syntax near (line 1, column 40):

select 1 from names n1 order by nullif(n1.id, n1.*);
                                       ^^^^^
Error with syntax near (line 1, column 47):

select 1 from names n1 order by nullif(n1.id, n1.*);
                                              ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 order by nullif(n1.id, n1.*);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for nullif operation
Error with syntax near (line 1, column 40):

select 1 from names n1 order by nullif(NULL, n1.*);
                                       ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 order by nullif(NULL, n1.*);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for nullif operation
Error with syntax near (line 1, column 40):

select 1 from names n1 order by nullif(n1.*, n1.*);
                                       ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 order by nullif(n1.*, n1.*);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for coalesce operation
Error with syntax near (line 1, column 39):

select 1 from names n1 where coalesce(n1.*)=NULL;
                                      ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 where coalesce(n1.*)=NULL;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for greatest operation
Error with syntax near (line 1, column 39):

select 1 from names n1 where greatest(n1.*)=NULL;
                                      ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 where greatest(n1.*)=NULL;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for least operation
Error with syntax near (line 1, column 36):

select 1 from names n1 where least(n1.*)=NULL;
                                   ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 where least(n1.*)=NULL;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for nullif operation
Error with syntax near (line 1, column 37):

select 1 from names n1 where nullif(n1.*,NULL)=NULL;
                                    ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 where nullif(n1.*,NULL)=NULL;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for nullif operation
Error with syntax near (line 1, column 37):

select 1 from names n1 where nullif(NULL,n1.*)=NULL;
                                    ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 where nullif(NULL,n1.*)=NULL;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for nullif operation
Error with syntax near (line 1, column 37):

select 1 from names n1 where nullif(n1.*,n1.*)=NULL;
                                    ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 where nullif(n1.*,n1.*)=NULL;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for coalesce operation
Error with syntax near (line 1, column 54):

select 1 from names n1 group by n1.* having coalesce(n1.*)=NULL;
                                                     ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 group by n1.* having coalesce(n1.*)=NULL;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for greatest operation
Error with syntax near (line 1, column 54):

select 1 from names n1 group by n1.* having greatest(n1.*)=NULL;
                                                     ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 group by n1.* having greatest(n1.*)=NULL;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for least operation
Error with syntax near (line 1, column 51):

select 1 from names n1 group by n1.* having least(n1.*)=NULL;
                                                  ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 group by n1.* having least(n1.*)=NULL;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for nullif operation
Error with syntax near (line 1, column 52):

select 1 from names n1 group by n1.* having nullif(n1.*,NULL)=NULL;
                                                   ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 group by n1.* having nullif(n1.*,NULL)=NULL;
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_NOT_COMPATIBLE : Type TABLENAME.* not compatible for nullif operation
Error with syntax near (line 1, column 52):

select 1 from names n1 group by n1.* having nullif(n1.*,n1.*)=NULL;
                                                   ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select 1 from names n1 group by n1.* having nullif(n1.*,n1.*)=NULL;

